--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -34,5 +34,6 @@ toc:
       - page: Organization Committee
         url: ./#committees
       - page: Program Committee
+        url: ./pc
       - page: Contacts
         url: ./#contacts
