--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -42,3 +42,5 @@ toc:
         url: ./pc
       - page: Contacts
         url: ./#contacts
+  - title: Previous Edition
+    url: http://www.ieee-aike.org/2018/
