--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -24,6 +24,7 @@ toc:
   - title: Attending
     submenu:
       - page: Registration
+        url: http://www.cvent.com/d/m6qfg7
       - page: Venue 
         url: https://www.hotelreginamargherita.com/en/
       # - page: Accomodation
