--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,7 +15,7 @@ toc:
         url: ./#dates
       - page: Submission Instructions
         url: ./#submission
-  - title: Awards and Travel Grants
+  - title: Awards and Grants
     submenu:
       - page: C.V. Ramamoorthy Award
         url: ./award
